# KnowledgeBot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  mkdocs.yml  requirements-docs.txt
libs/common/: __init__.py  config.py  exceptions.py  logging.py  pyproject.toml  responses.py
services/core/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/core/alembic/: README.md  env.py
services/core/alembic/versions/: 001_initial_tables.py
services/core/app/: __init__.py  celery_app.py  config.py  database.py  main.py
services/core/app/api/: __init__.py  deps.py
services/core/app/api/v1/: __init__.py  (+5 more)
services/core/app/embeddings/: __init__.py
services/core/app/llm/: __init__.py  llm_service.py
services/core/app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  knowledge_base.py  message.py
services/core/app/processors/: __init__.py  docx_processor.py  markdown_processor.py  pdf_processor.py  text_processor.py
services/core/app/retrievers/: __init__.py  milvus_retriever.py
services/core/app/schemas/: __init__.py  chat.py  chunk.py  common.py  document.py  knowledge_base.py  retrieval.py
services/core/app/services/: __init__.py  chat_service.py  document_processor.py  document_service.py  embedding.py  embedding_service.py  kb_service.py  retrieval_service.py
services/core/app/storage/: __init__.py  minio_client.py
services/core/app/tasks/: __init__.py  celery_app.py  document_tasks.py  worker.py
services/core/app/utils/: __init__.py  hash.py  logging.py  tokens.py
services/core/tests/: __init__.py  conftest.py
(+214 files in other folders)
